--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
     <!-- Tags para mídias sociais -->
-    <meta property="og:title" content="Portfólio de Otávio Vinicios Borges" />
+    <meta property="og:title" content="Portfólio de Otávio Vinícius Borges" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://otavioborges1991.github.io/Projeto-Portfolio/" />
     <meta property="og:image" content="https://yourwebsite.com/image.jpg" />
