Area de formação: agora consta números do github Novo botãao de ajuda Mais alguns ajustes no CSS

--- a/index.html
+++ b/index.html
@@ -85,7 +85,22 @@
                 </div>
             </article> <!-- Fim da article video -->
             <article id="competencias">
-                <h2><i class="fa-solid fa-bars-progress"></i>Competências</h2>
+                <h2>
+                    <i class="fa-solid fa-bars-progress"></i>
+                    Competências
+                    <details class="float-right">
+                        <summary >
+                                <i class="fa-regular fa-circle-question tooltip"></i>
+                        </summary>
+                        <div class="popup">
+                            <p class="texto-ajuda">
+                                As porcentagens indicam quantos dos meus projetos no github utilizam cada tecnologia.
+                            </p>
+                    </details>
+                    
+                    </div>
+                </h2>
+  
                 <div class="flex-row">
                     <div class="item">
                         <div class="info">
@@ -94,11 +109,11 @@
                                 HTML5
                             </span>
                             <span class="porcento">
-                                50%
+                                80%
                             </span>
                         </div>
-                        <progress class="barra" value="50" max="100">
-                            50%
+                        <progress class="barra" value="80" max="100">
+                            80%
                         </progress>
                     </div>
                     <div class="item">
@@ -108,11 +123,11 @@
                                 CSS3
                             </span>
                             <span class="porcento">
-                                50%
+                                80%
                             </span>
                         </div>
-                        <progress class="barra" value="50" max="100">
-                            50%
+                        <progress class="barra" value="80" max="100">
+                            80%
                         </progress>
                     </div>
                     <div class="item">
@@ -122,11 +137,11 @@
                                 Javascript
                             </span>
                             <span class="porcento">
-                                10%
+                                26%
                             </span>
                         </div>
-                        <progress class="barra" value="10" max="100">
-                            10%
+                        <progress class="barra" value="26" max="100">
+                            26%
                             </progess>
                     </div>
                     <div class="item">
@@ -134,20 +149,6 @@
                             <span class="nome">
                                 <i class="fa-brands fa-php"></i>
                                 PHP
-                            </span>
-                            <span class="porcento">
-                                40%
-                            </span>
-                        </div>
-                        <progress class="barra" value="40" max="100">
-                            40%
-                        </progress>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <span class="nome">
-                                <i class="fa-solid fa-database"></i>
-                                MySQL
                             </span>
                             <span class="porcento">
                                 20%
@@ -160,15 +161,29 @@
                     <div class="item">
                         <div class="info">
                             <span class="nome">
+                                <i class="fa-solid fa-database"></i>
+                                MySQL
+                            </span>
+                            <span class="porcento">
+                                13%
+                            </span>
+                        </div>
+                        <progress class="barra" value="13" max="100">
+                            13%
+                        </progress>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
                                 <i class="fa-brands fa-python"></i>
                                 Python
                             </span>
                             <span class="porcento">
-                                30%
+                                13%
                             </span>
                         </div>
-                        <progress class="barra" value="30" max="100">
-                            30%
+                        <progress class="barra" value="13" max="100">
+                            13%
                         </progress>
                     </div>
                     <div class="item">
@@ -178,11 +193,11 @@
                                 Copilot
                             </span>
                             <span class="porcento">
-                                50%
+                                100%
                             </span>
                         </div>
-                        <progress class="barra" value="50" max="100">
-                            50%
+                        <progress class="barra" value="100" max="100">
+                            100%
                         </progress>
                     </div>
                 </div>
@@ -387,11 +402,9 @@
                     <div class="projeto"> <!-- Projeto 01 -->
                         <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
                         <div class="projeto-info">
+                            <a href="https://otavioborges1991.github.io/Projeto-Videos/"><h3 class="titulo">Projeto vídeos</h3></a>
                             <p class="periodo">2025</p>
-                            <h3 class="titulo">Projeto vídeos</h3>
-                            <p>
-                                Projeto construido para demonstar a inserção de video em nosso site.
-                            </p>
+                            <p>Projeto construido para demonstar a inserção de video em nosso site.</p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
