Removido comentarios do css

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h2>
                     <i class="fa-solid fa-bars-progress"></i>
                     Competências
-                    <details class="float-right">
+                    <details class="float">
                         <summary >
                                 <i class="fa-regular fa-circle-question tooltip"></i>
                         </summary>
