--- a/index.html
+++ b/index.html
@@ -400,17 +400,18 @@
                 </h2>
                 <div id="projeto-container">
                     <div class="projeto"> <!-- Projeto 01 -->
-                        <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Vídeos.png" alt="projeto 01" class="foto">
                         <div class="projeto-info">
-                            <a href="https://otavioborges1991.github.io/Projeto-Videos/"><h3 class="titulo">Projeto vídeos</h3></a>
-                            <p class="periodo">2025</p>
-                            <p>Projeto construido para demonstar a inserção de video em nosso site.</p>
+                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Videos/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto vídeos
+                            </a>
+                            <p>Projeto construído para demonstrar a inserção de vídeos em nosso site.</p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, rerum. Eum itaque
-                                    hic vel velit. Quidem quibusdam corrupti expedita adipisci neque sapiente quasi
-                                    maiores laboriosam, recusandae deleniti a dicta. Neque.
+                                    O projeto usa iframes e miniaturas feitas com a api do Youtube para criar um site similar ao próprio Youtube,
+                                    aonde o usuário escolhe o vídeo que quer assistir
                                 </p>
                             </details>
                         </div>
@@ -419,7 +420,9 @@
                         <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
+                            <i class="fa-solid fa-circle-arrow-right"></i>
                             <h3 class="titulo">Projeto Cordel</h3>
+                        
                             <p>
                                 Projeto construído para demonstrar o efeito paralaxe em imagens.
                             </p>
@@ -437,9 +440,10 @@
                         <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
+                            <i class="fa-solid fa-circle-arrow-right"></i>
                             <h3 class="titulo">Projeto Android</h3>
                             <p>
-                                Projeto construido para demonstar conteúdo com imagens dinamicas.
+                                Projeto construído para demonstar conteúdo com imagens dinamicas.
                             </p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
@@ -455,9 +459,10 @@
                         <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
+                            <i class="fa-solid fa-circle-arrow-right"></i>
                             <h3 class="titulo">Projeto Redes Sociais</h3>
                             <p>
-                                Projeto construido para demonstar a inserção de iframes em nosso site.
+                                Projeto construído para demonstrar a inserção de iframes em nosso site.
                             </p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
