Retoques na area de descrição do projeto

--- a/index.html
+++ b/index.html
@@ -404,14 +404,22 @@
                         <div class="projeto-info">
                             <a class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Videos/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
-                                Projeto vídeos
+                                Projeto Vídeos
                             </a>
                             <p>Projeto construído para demonstrar a inserção de vídeos em nosso site.</p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    O projeto usa iframes e miniaturas feitas com a api do Youtube para criar um site similar ao próprio Youtube,
-                                    aonde o usuário escolhe o vídeo que quer assistir
+                                    O miniaturas feitas com a api do Youtube para criar um site similar ao próprio Youtube.
+                                </p>
+                                <p>
+                                    O usuário escolhe o vídeo que quer assistir, ao clicar em um vídeo ele é redirecionado a uma pagina aonde ele pode assitir o vídeo embutido na pagina com um iframe.
+                                </p>
+                                <p>
+                                    A disposição dos vídeos muda conforme a tamanho da tela muda.
+                                </p>
+                                <p>
+                                    Os vídeos usados são providenciados pela instituição de ensino aonde aprendi a criar esta página
                                 </p>
                             </details>
                         </div>
