--- a/index.html
+++ b/index.html
@@ -428,8 +428,10 @@
                         <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
-                            <i class="fa-solid fa-circle-arrow-right"></i>
-                            <h3 class="titulo">Projeto Cordel</h3>
+                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-cordel/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Cordel</h3>
+                            </a>
                         
                             <p>
                                 Projeto construído para demonstrar o efeito paralaxe em imagens.
@@ -448,8 +450,10 @@
                         <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
-                            <i class="fa-solid fa-circle-arrow-right"></i>
-                            <h3 class="titulo">Projeto Android</h3>
+                            <a class="titulo" href="">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Android
+                            </a>
                             <p>
                                 Projeto construído para demonstar conteúdo com imagens dinamicas.
                             </p>
