Finalizado a área do projeto cordel

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img class="foto" src="images/eu.jpg" alt="Foto de perfil Otávio Vinícius Borges">
             <h2 class="nome">Otávio Vinícius Borges <br> Desenvolvedor Full‑Stack em formação</h2>
             <p class="descricao">
-                Sou estudante de Desenvolvimento Web pelo Estudonauta, com foco em criar interfaces modernas, funcionais e responsivas. Tenho experiência prática com HTML5, CSS3, JavaScript, PHP (procedural e POO), MySQL e Python, além de conhecimentos em SEO e boas práticas de desenvolvimento.
+                Sou estudante de Desenvolvimento Web pelo Estudonauta, com foco na criação de interfaces modernas, funcionais e responsivas. Tenho experiência prática com HTML5, CSS3, JavaScript, PHP (procedural e POO), MySQL e Python, além de conhecimentos em SEO e boas práticas de desenvolvimento.
                 Atualmente desenvolvo projetos para aprimorar minhas habilidades e construir soluções reais. Se você precisa de uma landing page rápida, leve e bem estruturada, fico feliz em conversar.
             </p>
             <div id="social" class="flex-row">
@@ -134,7 +134,7 @@
                         <div class="info">
                             <span class="nome">
                                 <i class="fa-brands fa-js"></i>
-                                Javascript
+                                JavaScript
                             </span>
                             <span class="porcento">
                                 26%
@@ -255,7 +255,7 @@
                         </details>
                         <details class="curso">
                             <summary class="titulacao">
-                                Javascript
+                                JavaScript
                             </summary>
                             <div class="popup">
                                 <h3 class="instituicao">
@@ -410,38 +410,37 @@
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    O miniaturas feitas com a api do Youtube para criar um site similar ao próprio Youtube.
+                                    O projeto usa miniaturas feitas com a API do Youtube, criando um site similar ao próprio.
                                 </p>
                                 <p>
-                                    O usuário escolhe o vídeo que quer assistir, ao clicar em um vídeo ele é redirecionado a uma pagina aonde ele pode assitir o vídeo embutido na pagina com um iframe.
+                                    O usuário escolhe o vídeo que deseja assistir e, ao clicar, é redirecionado para uma página onde pode assistir ao vídeo incorporado por meio de um iframe.
                                 </p>
                                 <p>
-                                    A disposição dos vídeos muda conforme a tamanho da tela muda.
+                                    A disposição dos vídeos se adapta conforme o tamanho da tela.
                                 </p>
                                 <p>
-                                    Os vídeos usados são providenciados pela instituição de ensino aonde aprendi a criar esta página
+                                    Os vídeos utilizados são fornecidos pela instituição de ensino onde aprendi a criar esta página.
                                 </p>
                             </details>
                         </div>
                     </div>
                     <div class="projeto"> <!-- Projeto 02 -->
-                        <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Cordel.gif" alt="projeto 01" class="foto">
                         <div class="projeto-info">
-                            <p class="periodo">2025</p>
                             <a class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-cordel/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
-                                Projeto Cordel</h3>
+                                Projeto Cordel
                             </a>
-                        
                             <p>
                                 Projeto construído para demonstrar o efeito paralaxe em imagens.
                             </p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, rerum. Eum itaque
-                                    hic vel velit. Quidem quibusdam corrupti expedita adipisci neque sapiente quasi
-                                    maiores laboriosam, recusandae deleniti a dicta. Neque.
+                                    O projeto apresenta um texto de literatura de cordel, um gênero literário brasileiro que mescla poesia e narrativa.
+                                </p>
+                                <p>
+                                    As imagens de fundo permanecem estáticas enquanto a janela que permite visualizá-las se move durante a rolagem.
                                 </p>
                             </details>
                         </div>
@@ -455,7 +454,7 @@
                                 Projeto Android
                             </a>
                             <p>
-                                Projeto construído para demonstar conteúdo com imagens dinamicas.
+                                Projeto construído para demonstrar conteúdo com imagens dinâmicas.
                             </p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
